# studying

./: .gitignore  README.md  typeclasses-vs-the-world.md
aeson-tutorial/: Main.hs  aeson-tutorial.cabal  stack.yaml
meta-haskell/: Depends.hs  Makefile  examples.hs  meta-haskell.lhs  meta-haskell.md
practical-template-haskell-tutorial/: Main.hs  Metaprograms.hs  README.md  practical-th.cabal
