name:                practical-th
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/practical-th#readme
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable practical-th
  hs-source-dirs:      .
  main-is:             Main.hs
  other-modules:       Metaprograms
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , template-haskell
